fixed the overlapping.

--- a/src/style_sheets/Project.css
+++ b/src/style_sheets/Project.css
@@ -10,6 +10,8 @@
    margin-left: 30px;
    margin-right: 30px;
    margin-top: -20px;
+   margin-bottom: 50px;
+   padding-bottom: 50px;
    padding: 20px;
    border-radius: 20px;
 
